# minau

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: display_image.rs  display_info.rs  info.rs  input.rs  m3u.rs  macros.rs  main.rs  play_music.rs  play_url.rs
src/player/: info.rs  metadata.rs  mod.rs  play.rs  player.rs  player_structs.rs
