[package]
name = "minau"
version = "0.2.8"
edition = "2024"
license = "BSD-3-Clause"
authors = ["sirasaki-konoha <konoha@pik6c.tech>"]
description = "A simple, minimal music player"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
futures-util = "0.3.31"
humantime = "2.3.0"
image = "0.25.8"
indicatif = "0.18.0"
lofty = "0.22.4"
minifb = "0.28.0"
once_cell = "1.21.3"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "vorbis"] }
rodio = "0.21"
tokio = { version = "1.47.1", features = ["full"] }
unicode-width = "0.2.1"
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-tls = "0.6"
http-body-util = "0.1"
infer = "0.19.0"

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
panic = "abort"
overflow-checks = false
lto = "fat"
codegen-units = 1

